Fix font styling for form header. Add container class to the submit button. Change button color based on brand selection. Disable submit button when no product selected.

--- a/internalSupportFormFinal.html
+++ b/internalSupportFormFinal.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<h1 class="container" style="margin-bottom: 10px; align-content:center; font-style: roboto, helvetica">Campaign Monitor Internal Support Form</h1>
+<h1 class="container" style="margin-bottom: 10px; align-content:center; font-family: roboto, helvetica">Campaign Monitor Internal Support Form</h1>
 
 <hr class="hr">
 
@@ -45,6 +45,7 @@
                 <textarea name="description" id="description" class="form-control" style="height:220px; resize:none"></textarea>
             </div>
 
+            <!-- List area for resource links before submission button. -->
             <div class="container" id="resources">
                 <p id="checkResources">Please be sure to check the following resources before submitting your issue:</p>
                 <ul class="list-group">
@@ -64,8 +65,8 @@
 
             <input type="hidden"  id="external" name="external" value="1" /><br>
             
-            <!-- Submit button -->
-            <input type="submit" name="submit" class="btn btn-primary" style="background-color:#509DF5">
+            <!-- Submit button #7956FF-->
+            <input type="submit" name="submit" id="submit" class="container btn btn-primary" style="background-color:#509DF5">
         </div>
         
     </form>
