Uncomment resource link list in index and JS files.

--- a/internalSupportFormFinal.html
+++ b/internalSupportFormFinal.html
@@ -1,4 +1,4 @@
-<!-- Z.S. 3/1/19 -->
+<!-- Z.S. 3/12/19 -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -47,20 +47,19 @@
             </div>
 
             <!-- List area for resource links before submission button. -->
-            <!-- TO DO: Enable after rollout of Guru for CM teams -->
 
-            <!-- <div class="container" id="resources">
+            <div class="container" id="resources">
                 <p id="checkResources">Please be sure to check the following resources before submitting your issue:</p>
                 <ul class="list-group">
                     <li class="list-group-item" id="list1">
                         <a id="guru" href="https://app.getguru.com/dashboard">Guru</a>
                     </li>
 
-                    <li class="list-group-item" id="list2">
+                    <li class="list-group-item " id="list2">
                         <a id="rc" href="https://support.e2ma.net/Resource_Center">Resource Center</a>
                     </li>
                 </ul>
-            </div> -->
+            </div>
 
             <!-- Pass subject line value of "Internal Support Form Submission" -->
             <input type ="hidden" id="subject" maxlength="80" name="subject" size="20" type="text" value="Internal Support Form Submission"/>
