--- a/internalSupportFormFinal.html
+++ b/internalSupportFormFinal.html
@@ -8,12 +8,15 @@
 
     <!-- Bootstrap CSS Inclusion -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+
 </head>
 <body>
 
 <h1 class="container" style="margin-bottom: 10px; align-content:center; font-family: roboto, helvetica">Campaign Monitor Internal Support Form</h1>
 
 <hr class="hr">
+
 
 <!-- Begin Form -->
     <form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST" class="container">
@@ -32,7 +35,7 @@
 
             <!-- Choose which product to receive support for -->
             <div class="container">
-                <label for="recordType">What Product?</label>
+                <label for="recordType">What Product? *</label>
                 <select  id="recordType" name="recordType" class="form-control">
                     <option value="">--None--</option>
                     <option value="012o00000016Bio">Campaign Monitor</option>
@@ -41,11 +44,20 @@
                 <br>
             </div>
 
-            <!-- Account Id field -->
-            <div class="form-group container">
-                <label for="accountId">Account ID</label>
-                <br>
-                <input  id="00N1J00000GD7wX" class="form-control" maxlength="25" name="00N1J00000GD7wX" size="20" type="text"/>
+             <!-- Requester Email Field -->
+             <div class="container row">
+                <div class="form-group container col">
+                    <label for="email">Requester Email *</label>
+                    <br>
+                    <input  id="00N1J00000FHR5G" class="form-control" maxlength="80" name="00N1J00000FHR5G" size="20" type="text" required/>
+                </div>            
+
+                <!-- Account Id field -->
+                <div class="form-group container col">
+                    <label for="accountId">Account / Global ID or Hex Link</label>
+                    <br>
+                    <input id="00N1J00000GD7wX" class="form-control" maxlength="25" name="00N1J00000GD7wX" size="20" type="text" placeholder="Ex. 1111111"/>
+                </div>
             </div>
 
             <!-- Description Field -->
@@ -76,7 +88,7 @@
             <input type="hidden"  id="external" name="external" value="1" /><br>
             
             <!-- Submit button #7956FF-->
-            <input type="submit" name="submit" id="submit" class="container btn btn-primary" style="background-color:#509DF5">
+            <input type="submit" name="submit" id="submit" class="container btn btn-primary" style="background-color:#FF644B">
         </div>
         
     </form>
